# noscript-boilerplate

./: Cargo.toml
deploy/: Cargo.toml
deploy/src/: deploy.rs  types.rs
runtime/: Cargo.toml
script/: Cargo.toml
script/src/: lib.rs
types/: Cargo.toml
types/src/: lib.rs
