[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.194"
serde_json = "1.0.109"

[profile.release]
lto = true
opt-level = "z"
